@@ -839,7 +839,7 @@ These are \kbd{double} approximations to useful constants:
 
 \noindent \tet{LOG2_10}: $\log 10 / \log 2$.
 
-\noindent \tet{PI}: $\pi$.
+\noindent \tet{M_PI}: $\pi$.
 
 \section{Iterating over small primes, low-level interface}
 \label{se:primetable}
